--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,7 +35,7 @@ h2{
     &__card{
         display: flex;
         text-align: center;
-        font-size: 1.3em;
+        font-size: 1.15em;
         .numberlist{
         color: white;
         font-weight: 700;
